--- a/style/theme/responsive.scss
+++ b/style/theme/responsive.scss
@@ -65,14 +65,21 @@ body {
 }
 
 .logo {
-	/* change display value to inline-block to show logo */
-	display: none;
+	@if $responsive-hide-logo == true {
+		display: none;
+	}
 	float: none;
+	margin: 0 auto;
 	padding: 10px;
+	img {
+		margin: 0 auto;
+	}
 }
 
 #site-description h1, #site-description p, #site-description p.sitename {
-	display: block;
+	@if $responsive-hide-logo == true {
+		display: block;
+	}
 	text-align: inherit;
 	float: none;
 	margin: 5px;
